Edit width relative the flex-gap so the grid forms correctly

--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,14 @@
 .container{
     display:flex;
     flex-wrap: wrap;
-    width: 800px;
+    width: 860px;
     margin: 0 auto;
+    gap: 4px;
 }
 
 .square{
     height: 50px;
     background-color: aqua;
-    border: 1px solid black;
     flex: 0 1 50px;
 }
 
